WRT-1307: Fix wording for Histogram

--- a/website/docs/series-types.mdx
+++ b/website/docs/series-types.mdx
@@ -123,7 +123,7 @@ chart.timeScale().fitContent();
 - **Data format**: [`HistogramData`](/api/interfaces/HistogramData.md) or [`WhitespaceData`](/api/interfaces/WhitespaceData.md)
 - **Style options**: a mix of [`SeriesOptionsCommon`](/api/interfaces/SeriesOptionsCommon.md) and [`HistogramStyleOptions`](/api/interfaces/HistogramStyleOptions.md)
 
-This series represents the distribution of values. It divides data into intervals (columns) and displays the frequency of values within each interval:
+This series illustrates the distribution of values with columns:
 
 export const histogramExample = `const chartOptions = { layout: { textColor: CHART_TEXT_COLOR, background: { type: 'solid', color: CHART_BACKGROUND_COLOR } } };
 const chart = createChart(document.getElementById('container'), chartOptions);
