WRT-1315: Fix style of comments

--- a/website/docs/series-types.mdx
+++ b/website/docs/series-types.mdx
@@ -177,7 +177,7 @@ You can adjust series options in two ways:
 - Specify the default options using the corresponding parameter while creating a series:
 
     ```js
-    // change default top & bottom colors of an area series in creating time
+    // Change default top & bottom colors of an area series in creating time
     const series = chart.addSeries(AreaSeries, {
         topColor: 'red',
         bottomColor: 'green',
@@ -187,7 +187,7 @@ You can adjust series options in two ways:
 - Use the [`ISeriesApi.applyOptions`](/api/interfaces/ISeriesApi.md#applyoptions) method to apply other options on the fly:
 
     ```js
-    // updating candlestick series options on the fly
+    // Updating candlestick series options on the fly
     candlestickSeries.applyOptions({
         upColor: 'red',
         downColor: 'blue',
