WRT-1685: Add article

--- a/website/tutorials/index.mdx
+++ b/website/tutorials/index.mdx
@@ -80,7 +80,9 @@ or submit your own.
 
 ## Analysis indicators
 
+We've prepared [analysis indicator examples](./tutorials/analysis-indicators) that are designed to be a starting point for creating your own indicators and can be used directly in your projects.
 Below is a list of indicators where each link points to their source code on GitHub.
+
 To run them locally, follow the [setup instructions](https://github.com/tradingview/lightweight-charts/indicator-examples) in the repository.
 You can also explore each indicator in action on a [live demo page](https://tradingview.github.io/lightweight-charts/indicator-examples/).
 
