WRT-1685: Apply suggestions from code review
Co-authored-by: Evgeniia Riazanova <eugeniyaryazanova@gmail.com>

--- a/website/tutorials/analysis-indicators.mdx
+++ b/website/tutorials/analysis-indicators.mdx
@@ -19,7 +19,7 @@ This guide provides an overview of the custom indicator examples.
 These examples are designed to be a starting point for creating your own indicators and can be used directly in your projects.
 
 The examples are self-contained and are not published on NPM.
-There are two different options for integrating into your project.
+There are two different options for integrating them into your project.
 Also, there are two approaches to add the indicators on the chart.
 
 ### Available indicators
@@ -139,7 +139,7 @@ setInterval(() => {
 
 The `apply…` helper attaches a lightweight `ISeriesPrimitive` to the source series.
 This primitive subscribes to the series' data changes.
-When a change is detected, it re-fetches the data, runs the calculation, and updates the indicator series automatically.
+When a change is detected, it refetches the data, runs the calculation, and updates the indicator series automatically.
 
 This approach is more robust, requires less code, and is the recommended way to use these examples.
 
