--- a/website/tutorials/index.mdx
+++ b/website/tutorials/index.mdx
@@ -125,7 +125,8 @@ export const ExamplesList = () => {
 
 ## Analysis indicators
 
-The [analysis indicator examples](./tutorials/analysis-indicators) below serve as a starting point for creating your own indicators. You can use them directly in your projects.
+The [analysis indicator examples](./tutorials/analysis-indicators) below serve as a starting point for creating your own indicators.
+You can use them directly in your projects.
 Below is a list of indicators where each link points to their source code on GitHub.
 
 To run them locally, follow the [setup instructions](https://github.com/tradingview/lightweight-charts/indicator-examples) in the repository.
