WRT-1685: Apply suggestions from code review
Co-authored-by: Evgeniia Riazanova <eugeniyaryazanova@gmail.com>

--- a/website/tutorials/index.mdx
+++ b/website/tutorials/index.mdx
@@ -125,9 +125,9 @@ export const ExamplesList = () => {
 
 ## Analysis indicators
 
-The [analysis indicator examples](./tutorials/analysis-indicators) below serve as a starting point for creating your own indicators.
+The [analysis indicator](./tutorials/analysis-indicators) examples below serve as a starting point for creating your own indicators.
 You can use them directly in your projects.
-Below is a list of indicators where each link points to their source code on GitHub.
+Follow the links to see the indicators' source code on GitHub.
 
 To run them locally, follow the [setup instructions](https://github.com/tradingview/lightweight-charts/indicator-examples) in the repository.
 You can also explore each indicator in action on a [live demo page](https://tradingview.github.io/lightweight-charts/indicator-examples/).
