Apply suggestions from code review
WRT-1393: Fix wording

Co-authored-by: Anastasiia Chuprina <110668595+anachuprina@users.noreply.github.com>

--- a/website/tutorials/react/01-simple.mdx
+++ b/website/tutorials/react/01-simple.mdx
@@ -33,7 +33,7 @@ import code from '!!raw-loader!@site/src/components/tutorials/simple-react-examp
 
 <CodeBlock replaceThemeConstants className="language-jsx">{code}</CodeBlock>
 
-## Results
+## Result
 
 Execute the `npm start` command in the `lwc-react` folder to run the project locally. Then open `http://localhost:1234` in your web browser to see the result.
 
